// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterComponent should display loading state correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="row"
  >
    <div
      className="col-md-10 col-12"
    >
      <div
        className="form-group"
      >
        <input
          className="mb-3 form-control"
          id="searchText"
          onChange={[Function]}
          placeholder="Search here"
          type="text"
        />
      </div>
    </div>
    <div
      className="col-md-2 col-12"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        id="btn-filter"
        type="submit"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <small
      className="text-muted mb-3 form-text"
    >
      
    </small>
  </div>
</form>
`;

exports[`FilterComponent should display underline text correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="row"
  >
    <div
      className="col-md-10 col-12"
    >
      <div
        className="form-group"
      >
        <input
          className="mb-3 form-control"
          id="searchText"
          onChange={[Function]}
          placeholder="Search here"
          type="text"
        />
      </div>
    </div>
    <div
      className="col-md-2 col-12"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="btn-filter"
        type="submit"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <small
      className="text-muted mb-3 form-text"
    >
      some text
    </small>
  </div>
</form>
`;

exports[`FilterComponent should render correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="row"
  >
    <div
      className="col-md-10 col-12"
    >
      <div
        className="form-group"
      >
        <input
          className="mb-3 form-control"
          id="searchText"
          onChange={[Function]}
          placeholder="Search here"
          type="text"
        />
      </div>
    </div>
    <div
      className="col-md-2 col-12"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="btn-filter"
        type="submit"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <small
      className="text-muted mb-3 form-text"
    >
      
    </small>
  </div>
</form>
`;

exports[`should display loading state correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="row"
  >
    <div
      className="col-md-10 col-12"
    >
      <div
        className="form-group"
      >
        <input
          className="mb-3 form-control"
          id="searchText"
          onChange={[Function]}
          placeholder="Search here"
          type="text"
        />
      </div>
    </div>
    <div
      className="col-md-2 col-12"
    >
      <button
        className="btn btn-primary"
        disabled={true}
        id="btn-filter"
        type="submit"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <small
      className="text-muted mb-3 form-text"
    >
      
    </small>
  </div>
</form>
`;

exports[`should display underline text correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="row"
  >
    <div
      className="col-md-10 col-12"
    >
      <div
        className="form-group"
      >
        <input
          className="mb-3 form-control"
          id="searchText"
          onChange={[Function]}
          placeholder="Search here"
          type="text"
        />
      </div>
    </div>
    <div
      className="col-md-2 col-12"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="btn-filter"
        type="submit"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <small
      className="text-muted mb-3 form-text"
    >
      some text
    </small>
  </div>
</form>
`;

exports[`should render correctly 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="row"
  >
    <div
      className="col-md-10 col-12"
    >
      <div
        className="form-group"
      >
        <input
          className="mb-3 form-control"
          id="searchText"
          onChange={[Function]}
          placeholder="Search here"
          type="text"
        />
      </div>
    </div>
    <div
      className="col-md-2 col-12"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        id="btn-filter"
        type="submit"
      >
        Search
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <small
      className="text-muted mb-3 form-text"
    >
      
    </small>
  </div>
</form>
`;
